# LabelForge

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  entrypoint.sh  netlify.toml  render.yaml
.github/workflows/: tauri-release.yml
backend/: manage.py  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/labelforge/: settings.py  urls.py  wsgi.py
backend/projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/projects/management/commands/: seed_data.py
backend/projects/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Annotate.tsx  Dashboard.tsx  Login.tsx  ProjectDetail.tsx  Projects.tsx  Review.tsx
