[package]
name = "labelforge"
version = "1.0.0"
description = "LabelForge — Data Labeling Platform"
authors = ["idoroe"]
edition = "2021"

[lib]
name = "labelforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
